--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Holiday destination</h1>
+	<br>
+	<p>A paragraph that provides a brief overview of the destination</p>
+	<b><ol>
+		<li>A</li>
+		<li>B</li>
+		<li>C</li>
+		<li>D</li>
+		<li>E</li>
+	</ol>
+	<ul>
+		<li>A</li>
+		<li>B</li>
+		<li>C</li>
+		<li>D</li>
+		<li>E</li>
+	</ul></b>
     <script type="text/javascript" src="./script.js">
 </script>
 
